# Startion

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: sync.yml
startion/: __init__.py  __main__.py  ai.py  cli.py  config.py  github.py  models.py  notion.py
